new nb for nn, old nb for ensemble methods

--- a/Notebooks/old_pre_processing_and_modelling.ipynb
+++ b/Notebooks/old_pre_processing_and_modelling.ipynb
@@ -1,6 +1,238 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "651ff3a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excel_file = pd.read_excel('..\\Data\\cleaned_and_split_data.xlsx', sheet_name=None)\n",
+    "\n",
+    "# Unpack the dataframes into separate variables\n",
+    "X_train = excel_file['X_train']\n",
+    "X_test = excel_file['X_test']\n",
+    "y_train = excel_file['y_train']\n",
+    "y_test = excel_file['y_test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1e15e289",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Neuter_status</th>\n",
+       "      <th>Outdoors</th>\n",
+       "      <th>Other_cats</th>\n",
+       "      <th>Activity_level</th>\n",
+       "      <th>Contact_people</th>\n",
+       "      <th>Aggression_stranger</th>\n",
+       "      <th>Aggression_owner</th>\n",
+       "      <th>Aggression_cats</th>\n",
+       "      <th>Shyness_novel</th>\n",
+       "      <th>Shyness_strangers</th>\n",
+       "      <th>Grooming</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.000000</td>\n",
+       "      <td>3965.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.774506</td>\n",
+       "      <td>1.542245</td>\n",
+       "      <td>0.787390</td>\n",
+       "      <td>2.567970</td>\n",
+       "      <td>0.847415</td>\n",
+       "      <td>3.769483</td>\n",
+       "      <td>4.096091</td>\n",
+       "      <td>1.120807</td>\n",
+       "      <td>1.099117</td>\n",
+       "      <td>1.593443</td>\n",
+       "      <td>2.043380</td>\n",
+       "      <td>1.904161</td>\n",
+       "      <td>1.79319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.743197</td>\n",
+       "      <td>0.498275</td>\n",
+       "      <td>0.409206</td>\n",
+       "      <td>1.907348</td>\n",
+       "      <td>0.359632</td>\n",
+       "      <td>0.870428</td>\n",
+       "      <td>0.876649</td>\n",
+       "      <td>0.422958</td>\n",
+       "      <td>0.379882</td>\n",
+       "      <td>0.841745</td>\n",
+       "      <td>1.001328</td>\n",
+       "      <td>1.059956</td>\n",
+       "      <td>0.99778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.183600</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.821900</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.950700</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.747900</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>24.811000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Age       Gender  Neuter_status     Outdoors   Other_cats  \\\n",
+       "count  3965.000000  3965.000000    3965.000000  3965.000000  3965.000000   \n",
+       "mean      4.774506     1.542245       0.787390     2.567970     0.847415   \n",
+       "std       3.743197     0.498275       0.409206     1.907348     0.359632   \n",
+       "min       0.183600     1.000000       0.000000     0.000000     0.000000   \n",
+       "25%       1.821900     1.000000       1.000000     1.000000     1.000000   \n",
+       "50%       3.950700     2.000000       1.000000     2.000000     1.000000   \n",
+       "75%       6.747900     2.000000       1.000000     5.000000     1.000000   \n",
+       "max      24.811000     2.000000       1.000000     5.000000     1.000000   \n",
+       "\n",
+       "       Activity_level  Contact_people  Aggression_stranger  Aggression_owner  \\\n",
+       "count     3965.000000     3965.000000          3965.000000       3965.000000   \n",
+       "mean         3.769483        4.096091             1.120807          1.099117   \n",
+       "std          0.870428        0.876649             0.422958          0.379882   \n",
+       "min          1.000000        1.000000             1.000000          1.000000   \n",
+       "25%          3.000000        4.000000             1.000000          1.000000   \n",
+       "50%          4.000000        4.000000             1.000000          1.000000   \n",
+       "75%          4.000000        5.000000             1.000000          1.000000   \n",
+       "max          5.000000        5.000000             5.000000          5.000000   \n",
+       "\n",
+       "       Aggression_cats  Shyness_novel  Shyness_strangers    Grooming  \n",
+       "count      3965.000000    3965.000000        3965.000000  3965.00000  \n",
+       "mean          1.593443       2.043380           1.904161     1.79319  \n",
+       "std           0.841745       1.001328           1.059956     0.99778  \n",
+       "min           1.000000       1.000000           1.000000     1.00000  \n",
+       "25%           1.000000       1.000000           1.000000     1.00000  \n",
+       "50%           1.000000       2.000000           2.000000     1.00000  \n",
+       "75%           2.000000       3.000000           2.000000     3.00000  \n",
+       "max           5.000000       5.000000           5.000000     5.00000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ff2495ca",
    "metadata": {},
@@ -32,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "id": "b45c811d",
    "metadata": {},
    "outputs": [],
