--- a/Notebooks/new_preprocessing_modeling.ipynb
+++ b/Notebooks/new_preprocessing_modeling.ipynb
@@ -2135,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "40628404",
+   "id": "5e6d046a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2149,7 +2149,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "01b9b9f8",
+   "id": "85c92206",
    "metadata": {},
    "outputs": [
     {
@@ -2215,7 +2215,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "2661ee05",
+   "id": "145dd3c1",
    "metadata": {},
    "outputs": [
     {
@@ -2281,7 +2281,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e6862839",
+   "id": "9c93d735",
    "metadata": {},
    "outputs": [
     {
@@ -2422,8 +2422,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "ed8efbe0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "101/101 [==============================] - 0s 928us/step - loss: 0.6834 - accuracy: 0.5697 - recall: 0.5898\n",
+      "Epoch 2/10\n",
+      "101/101 [==============================] - 0s 964us/step - loss: 0.6529 - accuracy: 0.6169 - recall: 0.6031\n",
+      "Epoch 3/10\n",
+      "101/101 [==============================] - 0s 1ms/step - loss: 0.6457 - accuracy: 0.6280 - recall: 0.6251\n",
+      "Epoch 4/10\n",
+      "101/101 [==============================] - 0s 977us/step - loss: 0.6393 - accuracy: 0.6335 - recall: 0.6208\n",
+      "Epoch 5/10\n",
+      "101/101 [==============================] - 0s 958us/step - loss: 0.6355 - accuracy: 0.6462 - recall: 0.6295\n",
+      "Epoch 6/10\n",
+      "101/101 [==============================] - 0s 908us/step - loss: 0.6286 - accuracy: 0.6494 - recall: 0.6607\n",
+      "Epoch 7/10\n",
+      "101/101 [==============================] - 0s 968us/step - loss: 0.6266 - accuracy: 0.6533 - recall: 0.6427\n",
+      "Epoch 8/10\n",
+      "101/101 [==============================] - 0s 928us/step - loss: 0.6226 - accuracy: 0.6605 - recall: 0.6630\n",
+      "Epoch 9/10\n",
+      "101/101 [==============================] - 0s 958us/step - loss: 0.6216 - accuracy: 0.6549 - recall: 0.6485\n",
+      "Epoch 10/10\n",
+      "101/101 [==============================] - 0s 1ms/step - loss: 0.6193 - accuracy: 0.6553 - recall: 0.6553\n",
+      "54/54 [==============================] - 0s 640us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\gwent\\AppData\\Local\\Temp\\ipykernel_4284\\1005917253.py:23: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  master_scores = master_scores.append(new_row, ignore_index=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[736, 423],\n",
+       "       [231, 310]], dtype=int64)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# RUS \n",
+    "model11 = create_mlp(64, 'adam')\n",
+    "model11.fit(X_resampled_rus, y_resampled_rus, epochs=10, batch_size=25)\n",
+    "\n",
+    "y_pred = model11.predict(X_test_scaled_encoded)\n",
+    "y_pred = np.round(y_pred).astype(int)\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "add_to_master(\"RUS 1 hidden, 64 nodes, adam, batch 25\", y_test, y_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "6b41c705",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F1</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>RUS 1 hidden, 64 nodes, adam</td>\n",
+       "      <td>0.588</td>\n",
+       "      <td>0.495</td>\n",
+       "      <td>0.427</td>\n",
+       "      <td>0.618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>RUS 1 hidden, 64 nodes, adam, batch 25</td>\n",
+       "      <td>0.573</td>\n",
+       "      <td>0.487</td>\n",
+       "      <td>0.423</td>\n",
+       "      <td>0.615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>RUS 1 hidden, 100 nodes, adam</td>\n",
+       "      <td>0.527</td>\n",
+       "      <td>0.465</td>\n",
+       "      <td>0.417</td>\n",
+       "      <td>0.615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>RUS 1 hidden, 64 nodes, adam</td>\n",
+       "      <td>0.518</td>\n",
+       "      <td>0.471</td>\n",
+       "      <td>0.432</td>\n",
+       "      <td>0.630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ROS 1 hidden, 64 nodes, adam</td>\n",
+       "      <td>0.462</td>\n",
+       "      <td>0.449</td>\n",
+       "      <td>0.436</td>\n",
+       "      <td>0.639</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     Model  Recall     F1  Precision  Accuracy\n",
+       "8             RUS 1 hidden, 64 nodes, adam   0.588  0.495      0.427     0.618\n",
+       "12  RUS 1 hidden, 64 nodes, adam, batch 25   0.573  0.487      0.423     0.615\n",
+       "10           RUS 1 hidden, 100 nodes, adam   0.527  0.465      0.417     0.615\n",
+       "11            RUS 1 hidden, 64 nodes, adam   0.518  0.471      0.432     0.630\n",
+       "9             ROS 1 hidden, 64 nodes, adam   0.462  0.449      0.436     0.639"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "master_scores.sort_values('Recall', ascending=False).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5f649afa",
+   "id": "f3358cd3",
    "metadata": {},
    "outputs": [],
    "source": []
