--- a/Notebooks/wrangling_eda.ipynb
+++ b/Notebooks/wrangling_eda.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda activate wool_sucking_nn"
+    "# just so you know where you are :) \n",
+    "#!conda activate wool_sucking_nn"
    ]
   },
   {
